# service-directory-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  static.yml
src/: config.rs  main.rs
webpages/: CNAME  index.html  install.sh
